<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/itemcliente_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:background="@drawable/rounded_edittext"
        tools:ignore="DisableBaselineAlignment" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8" >

            <ImageView
                android:id="@+id/imgcliente"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/image_contdesc"
                android:src="@drawable/ic_addclient" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical"
            android:paddingLeft="22dp" >

            <TextView
                android:id="@+id/edtempresa_clientlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empresa_clientlist"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/edtruc_clientlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/ruc_clientlist" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.2"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/edtdepartamento_clientlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/departamento_clientlist"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="5dp" >

                <TextView
                    android:id="@+id/edtprovincia_clientlist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/provincia_clientlist" />

                <TextView
                    android:id="@+id/edtdistrito_clientlist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="28dp"
                    android:text="@string/distrito_clientlist" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/edtapellidos_clientlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apellidos_clientlist"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/edtnombre_clientlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/nombre_clientlist" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/edtdireccion_clientlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/direccion_clientlist"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="5dp" >

                <TextView
                    android:id="@+id/edttelefono_clientlist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/telefono_clientlist" />

                <TextView
                    android:id="@+id/edtcelular_clientlist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="28dp"
                    android:text="@string/celular_clientlist" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>