<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/fondo"
    android:baselineAligned="false" >
    
			<LinearLayout
			android:layout_weight="1"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:orientation="vertical">
			
						<LinearLayout
			            android:id="@+id/ac_layout_left"
			            android:layout_width="400dp"
			            android:layout_height="wrap_content"
			            android:layout_gravity="center"
			            android:layout_marginLeft="30dp"
			            android:layout_marginTop="75dp"
			            android:orientation="vertical" >
			            
						    
						    		<TextView
					                android:id="@+id/edtempresa_clientlist"
					                android:text="@string/label_imagen_empresa"
					                style="@style/myprofile_Label"
					                android:fontFamily="sans-serif-condensed"
					                android:textStyle="bold|italic" />
					
					            	<LinearLayout
					                android:layout_width="match_parent"
					                android:layout_height="3dp"
					                android:background="#33b5e5" >
					           	 	</LinearLayout>
					            
			            			<ImageView
					                android:id="@+id/imageView1"
					                android:layout_width="300dp"
					                android:layout_height="200dp"
					                android:layout_gravity="center"
					                android:layout_marginBottom="40dp"
					                android:layout_marginTop="20dp"
					                android:contentDescription="@string/store_image"
					                android:src="@drawable/mi_empresa" />
			            			
			            			<TextView
					                android:id="@+id/edtruc_clientlist"
					                android:text="@string/label_nombre_empresa"
					                style="@style/myprofile_Label"
					                android:fontFamily="sans-serif-condensed"
					                android:textStyle="bold|italic" />
					
					           	 	<LinearLayout
					                android:layout_width="match_parent"
					                android:layout_height="3dp"
					                android:layout_marginBottom="20dp"
					                android:background="#33b5e5" >
					            	</LinearLayout>
					            	
					           	 	<EditText
					           	 	    android:id="@+id/txtnombre_empresa"
					           	 	    style="@style/myprofile_edittext"
					           	 	    android:layout_marginBottom="20dp"
					           	 	    android:gravity="center"
					           	 	    android:hint="@string/in_empresa_nombre"
					           	 	    android:inputType="textCapSentences" />
					           	 	
					           	 	<EditText
					                android:id="@+id/txtruc_empresa"
					                style="@style/myprofile_edittext"
					                android:layout_marginBottom="20dp"
					                android:hint="@string/in_empresa_ruc"
					                android:maxLength="11"
					                android:inputType="number"
					                android:gravity="center"/>
					                
					                <LinearLayout 
					                android:layout_width="match_parent"
					                android:layout_height="wrap_content"
					                android:orientation="horizontal"
					                android:layout_marginBottom="20dp">
					                
					                			<EditText
					                			android:id="@+id/txtdepartamento_empresa"
								                android:layout_weight="1"
								                android:layout_width="0dp"
										        android:layout_height="wrap_content"
										        android:layout_marginRight="10dp"
										        android:background="@drawable/rounded_edittext"
										        android:textSize="@dimen/txt"
										        android:singleLine="true"
										        android:inputType="textCapSentences"
								                android:hint="@string/in_empresa_departamento"
								                android:gravity="center"
								                />
								                
								                <EditText
								                android:id="@+id/txtprovincia_empresa"
								                android:layout_weight="1"
								                android:layout_width="0dp"
										        android:layout_height="wrap_content"
										        android:layout_marginLeft="10dp"
										        android:background="@drawable/rounded_edittext"
										        android:textSize="@dimen/txt"
										        android:singleLine="true"		
										        android:inputType="textCapSentences"						               
								                android:hint="@string/in_empresa_provincia"
								                android:gravity="center"
								                />
								                
					                </LinearLayout>
					                
					                <EditText
					                android:id="@+id/txtdistrito_empresa"
					                android:layout_width="200dp"
							        android:layout_height="wrap_content"
							        android:background="@drawable/rounded_edittext"
							        android:textSize="@dimen/txt"
							        android:singleLine="true"
							        android:inputType="textCapSentences"
					                android:layout_marginBottom="20dp"
					                android:hint="@string/in_empresa_distrito"
					                android:layout_gravity="center"
					                android:gravity="center"/>
					                
					                <EditText
					                android:id="@+id/txtdireccion_empresa"
					                style="@style/myprofile_edittext"
					                android:inputType="textCapSentences"
					                android:hint="@string/in_empresa_direccion"
					                android:gravity="center"/>
						            
			            			
						</LinearLayout>
						
			</LinearLayout>
			




			<LinearLayout
			android:layout_width="3dp"
			android:layout_height="600dp"
			android:layout_gravity="center"
			android:background="@color/sky">
			</LinearLayout>
			
			
			
			
			
			
			<LinearLayout
			android:layout_weight="1"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:orientation="vertical">
						
						<LinearLayout
			            android:id="@+id/ac_layout_right"
			            android:layout_width="400dp"
			            android:layout_height="wrap_content"
			            android:layout_gravity="center"
			            android:layout_marginRight="30dp"
			            android:layout_marginTop="75dp"
			            android:orientation="vertical" >
					                
									<TextView
					                android:id="@+id/edtcelular_clientlist"
					                android:text="@string/label_datos_cliente"
					                style="@style/myprofile_Label"
					                android:fontFamily="sans-serif-condensed"
					                android:textStyle="bold|italic" />
					
					            	<LinearLayout
					                android:layout_width="match_parent"
					                android:layout_height="3dp"
					                android:layout_marginBottom="20dp"
					                android:background="#33b5e5" >
					           	 	</LinearLayout>
					           	 	
					            	<EditText
					                android:id="@+id/txtnombre_cliente"
					                style="@style/myprofile_edittext"
					                android:layout_marginBottom="20dp"
					                android:hint="@string/in_cliente_nombre"
					                android:inputType="textCapSentences"
					                android:gravity="center"/>
					            	
					            	<EditText
					                android:id="@+id/txtappaterno_cliente"
					                style="@style/myprofile_edittext"
					                android:layout_marginBottom="20dp"
					                android:inputType="textCapSentences"
					                android:hint="@string/in_cliente_appaterno"
					                android:gravity="center"/>
					            	
					            	<EditText
					                android:id="@+id/txtapmaterno_cliente"
					                style="@style/myprofile_edittext"
					                android:inputType="textCapSentences"
					                android:layout_marginBottom="20dp"
					                android:hint="@string/in_cliente_apmaterno"
					                android:gravity="center"/>
					            	
					            	<EditText
					                android:id="@+id/txtdni_cliente"
					                style="@style/myprofile_edittext"
					                android:layout_marginBottom="20dp"
					                android:hint="@string/in_cliente_dni"
					                android:inputType="number"
					                android:maxLength="8"
					                android:gravity="center"/>
					            	
					            	<EditText
					                android:id="@+id/txtcelular_cliente"
					                style="@style/myprofile_edittext"
					                android:layout_marginBottom="20dp"
					                android:hint="@string/in_cliente_celular"
					                android:inputType="number"
					                android:gravity="center"/>
					            	
					            	<EditText
					                android:id="@+id/txttelefono_cliente"
					                style="@style/myprofile_edittext"
					                android:layout_marginBottom="20dp"
					                android:hint="@string/in_cliente_telefono"
					                android:inputType="number"
					                android:gravity="center"/>
						    
			   						<LinearLayout
					                android:id="@+id/botonesaddcliente"
					                android:layout_width="match_parent"
					                android:layout_height="wrap_content"
					                android:layout_gravity="center"
					                android:layout_marginTop="50dp" >
					
								                <Button
								                    android:id="@+id/btncancelar_addclient"
								                    android:layout_width="wrap_content"
								                    android:layout_height="wrap_content"
								                    android:drawableLeft="@drawable/cancel"	 />
								
								                <Button
								                    android:id="@+id/btnok_addclient"
								                    android:layout_width="wrap_content"
								                    android:layout_height="wrap_content"
								                    android:drawableLeft="@drawable/ok"	
								                    />
					                
            						</LinearLayout> 
            						
			   						
			   						
			   						<ImageButton
			   						    android:id="@+id/btnclear"
			   						    android:layout_width="wrap_content"
			   						    android:layout_height="wrap_content"
			   						    android:src="@drawable/newfile"
			   						    android:layout_gravity="right"
						            	android:layout_marginTop="40dp"
						            	android:contentDescription="@string/cont_desc_guardar"  />

						</LinearLayout>
			    
			</LinearLayout>
</LinearLayout>